crates/swc_ecma_parser/tests/pat/errors/rest-not-last/class_method_and_constructor.js
class c {
  constructor(...a,b,){}
  fn(...a,b,) {}
}
